<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProviderActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <RadioButton
                    android:id="@+id/radio_gps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:onClick="onClickProvider"/>

                <RadioButton
                    android:id="@+id/radio_network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:onClick="onClickProvider"/>

                <RadioButton
                    android:id="@+id/radio_passive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:onClick="onClickProvider"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_gps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="onClickProvider"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/tv_gps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gps"
                        android:textSize="40sp"
                        android:textColor="@color/blue"/>

                    <TextView
                        android:id="@+id/tv_gps_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gps_description"
                        android:textSize="20sp"
                        android:gravity="center"/>

                </LinearLayout>

                <View
                    android:id="@+id/separator_1"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/blue"/>

                <LinearLayout
                    android:id="@+id/ll_network"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="onClickProvider"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/tv_network"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/network"
                        android:textSize="40sp"
                        android:textColor="@color/blue"/>

                    <TextView
                        android:id="@+id/tv_network_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/network_description"
                        android:textSize="20sp"
                        android:gravity="center"/>

                </LinearLayout>

                <View
                    android:id="@+id/separator_2"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/blue"/>

                <LinearLayout
                    android:id="@+id/ll_passive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="onClickProvider"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/tv_passive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/passive"
                        android:textSize="40sp"
                        android:textColor="@color/blue"/>

                    <TextView
                        android:id="@+id/tv_passive_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/passive_description"
                        android:textSize="20sp"
                        android:gravity="center"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>